# remote-desktop-clients

./: .env  .gitignore  .gitmodules  BUILDING  COPYRIGHT  COPYRIGHT-Opaque  COPYRIGHT-bVNC  FUNDING.yml  LICENSE-bVNC  README.md  build.gradle  copy_prebuilt_files.sh  create-prebuilt-dependencies.sh  download-prebuilt-dependencies.sh  freeRDPCore  gradle.properties  index.html  params.json  settings.gradle
CustomVnc-app/: build.gradle
Opaque/: .cproject  .project  AndroidManifest.xml  CHANGELOG-Opaque  build.gradle  prepare_project.sh  project.properties
Opaque-app/: build.gradle  prepare_project.sh
Opaque/ca-bundle/: make-new-bundle.sh  my-ca.crt
Opaque/docs/: creating_CA_bundle.txt
aRDP-app/: build.gradle
aSPICE-app/: build.gradle
bVNC/: .classpath  .gitignore  .project  AndroidManifest.xml  AndroidManifest.xml.CustomVnc  AndroidManifest.xml.aRDP  AndroidManifest.xml.aSPICE  AndroidManifest.xml.bVNC  AndroidManifest.xml.freeaRDP  AndroidManifest.xml.freeaSPICE  AndroidManifest.xml.freebVNC  CHANGELOG-Opaque  CHANGELOG-aRDP  CHANGELOG-aSPICE  CHANGELOG-bVNC  CHANGELOG-freebVNC  assets  build.gradle  build.xml  build_android.xml  copy_prebuilt_files.sh  jni  prepare_project.sh  project.properties  res
bVNC-app/: build.gradle
bVNC/jni/: Android.mk  libs
bVNC/layouts/: common_keycodes.in  convert.py  ignore.in  name_to_unicode.in
bVNC/src/: com  org
common/: build.gradle
common/aars/: README.md
docker/: Dockerfile  docker-compose.yml
eclipse_projects/: FreeRDP  Opaque  PubkeyGenerator  bVNC  create-prebuilt-dependencies.sh  download-prebuilt-dependencies.sh  remoteClientLib  spicelib
eclipse_projects/Opaque/: .classpath  .cproject  .project  AndroidManifest.xml  CHANGELOG-Opaque  prepare_project.sh  project.properties
eclipse_projects/PubkeyGenerator/: .project  AndroidManifest.xml  project.properties
eclipse_projects/SpiceClient/: .classpath  .project  AndroidManifest.xml  build.xml  build.xml.BAK  local.properties  proguard.cfg  project.properties  work
eclipse_projects/SpiceClient/jni/android-spice-src/: Android.mk  Makefile.am  android-spice-priv.h  android-spice-widget-priv.h  android-spice-widget.c  android-spice-widget.h  android-spice.c  android-spice.h  android-spicy.c  android-worker.c  androidkeymap.c  bio-gsocket.c  canvas_base.c  channel-base.c  channel-cursor.h  channel-display-mjpeg.c  channel-display-priv.h  channel-display.c  channel-main.c  channel-main.h  channel-playback.c  channel-record.c  channel-record.h  channel-usbredir.c  channel-usbredir.h  config.h  continuation.c  continuation.h  coroutine.h  coroutine_ucontext.c  decode-glz.c  demarshallers.h  generated_demarshallers.c  generated_demarshallers1.c  generated_marshallers.c  generated_marshallers1.c  gio-coroutine.c  glib-compat.h  jpeg_encoder.c  jpeg_encoder.h  (+54 more)
eclipse_projects/SpiceClient/jni/android-spice-src/common/: .gitignore  Makefile.am  canvas_base.c  canvas_base.h  canvas_utils.c  draw.h  gdi_canvas.c  gdi_canvas.h  gl_canvas.c  gl_canvas.h  gl_utils.h  glc.c  glc.c.save  glc.h  lines.c  lines.h  lz.h  lz_common.h  lz_compress_tmpl.c  lz_config.h  lz_decompress_tmpl.c  marshaller.c  marshaller.h  marshallers.h  mem.c  messages.h  ogl_ctx.c  ogl_ctx.h  pixman_utils.c  quic.c  quic.h  quic_config.h  quic_rgb_tmpl.c  quic_tmpl.c  region.c  region.h  rop3.c
eclipse_projects/SpiceClient/jni/android-spice-src/common/win/: Makefile.am
eclipse_projects/SpiceClient/jni/android-spice-src/common/win/my_getopt-1.5/: ChangeLog  Makefile.am  Makefile.test  README  my_getopt.c
eclipse_projects/SpiceClient/jni/android-spice-src/controller/: Makefile.am  controller.vala  custom.h  custom.vapi  gio-windows-2.0.vapi  menu.vala  namedpipe.c  namedpipe.h  namedpipeconnection.c  namedpipeconnection.h  namedpipelistener.c  namedpipelistener.h  test.c
eclipse_projects/SpiceClient/jni/android-spice-src/display/: display-name.c  edid-parse.c  edid.h  gnome-rr-config.c  gnome-rr-config.h  gnome-rr-generic.c  gnome-rr-generic.h  gnome-rr-output-info.c  gnome-rr-private.h  gnome-rr-windows.c  gnome-rr-windows.h  gnome-rr-x11.c  gnome-rr-x11.h  gnome-rr.c  gnome-rr.h
eclipse_projects/SpiceClient/jni/android-spice-src/spice/: Makefile.in  controller_prot.h  end-packed.h  enums.h  macros.h  protocol.h  vd_agent.h
eclipse_projects/ZoomerWithKeys/: .classpath  .project  AndroidManifest.xml  build.xml  default.properties  project.properties
eclipse_projects/bVNC/: .classpath  .gitignore  .project  AndroidManifest.xml  AndroidManifest.xml.aRDP  AndroidManifest.xml.aSPICE  AndroidManifest.xml.bVNC  AndroidManifest.xml.freeaRDP  AndroidManifest.xml.freeaSPICE  AndroidManifest.xml.freebVNC  CHANGELOG-aRDP  CHANGELOG-aSPICE  CHANGELOG-bVNC  CHANGELOG-freeaRDP  CHANGELOG-freeaSPICE  build.xml  build_android.xml  copy_prebuilt_files.sh  copy_prebuilt_sqlitegen_files.sh  (+4 more)
eclipse_projects/bVNC/jni/src/common/: Makefile.am  backtrace.c  backtrace.h  bitops.h  canvas_utils.c  canvas_utils.h  client_marshallers.h  gdi_canvas.c  gdi_canvas.h  generated_client_demarshallers.c  generated_client_demarshallers1.c  generated_client_marshallers.c  generated_server_demarshallers.c  generated_server_marshallers.c  generated_server_marshallers.h  gl_canvas.c  gl_canvas.h  gl_utils.h  glc.c  glc.h  lines.c  lz.c  lz_compress_tmpl.c  lz_config.h  macros.h  marshaller.c  marshaller.h  mem.c  messages.h  ogl_ctx.c  ogl_ctx.h  pixman_utils.c  quic.c  quic.h  quic_config.h  quic_family_tmpl.c  quic_rgb_tmpl.c  quic_tmpl.c  rect.h  region.c  (+5 more)
eclipse_projects/bVNC/jni/src/spice/: Makefile.am  Makefile.in  barrier.h  enums.h  protocol.h  start-packed.h  vd_agent.h
freeLIBVNCServer-app/: build.gradle
freeaRDP-app/: build.gradle
freeaSPICE-app/: build.gradle
freebVNC-app/: build.gradle
pubkeyGenerator/: .project  AndroidManifest.xml  LICENSE-com.trilead.ssh2  README.md  build.gradle  build.xml  project.properties
remoteClientLib/: .gitignore  .project  CHANGELOG-Opaque  COPYRIGHT  build-debug.gradle  build.gradle  build.xml  makebeta.sh
util/: my_rdesktop_prebuild.sh  my_rdesktop_scratch.sh
(+1972 files in other folders)
