NULL =

COMMON_SRCS =				\
	sw_canvas.h			\
	sw_canvas.c			\
	pixman_utils.h			\
	pixman_utils.c			\
	canvas_base.h			\
	canvas_base.c			\
	canvas_utils.h			\
	canvas_utils.c			\
	demarshallers.h			\
	draw.h				\
	gdi_canvas.h			\
	gdi_canvas.c			\
	gl_canvas.h			\
	gl_canvas.c			\
	glc.h				\
	glc.c				\
	gl_utils.h			\
	lz_common.h			\
	mutex.h				\
	ogl_ctx.h			\
	ogl_ctx.c			\
	quic.h				\
	quic.c				\
	quic_config.h			\
	rect.h				\
	region.h			\
	region.c			\
	ring.h				\
	rop3.h				\
	rop3.c				\
	lines.h				\
	lines.c				\
	lz.c				\
	lz_compress_tmpl.c		\
	lz_config.h			\
	lz_decompress_tmpl.c		\
	lz.h				\
	marshaller.h			\
	marshaller.c			\
	marshallers.h			\
	messages.h			\
	mem.h				\
	mem.c				\
	quic_family_tmpl.c		\
	quic_rgb_tmpl.c			\
	quic_tmpl.c			\
	ssl_verify.h			\
	ssl_verify.c			\
	$(NULL)

EXTRA_DIST = $(COMMON_SRCS)

